refactor diff to use java-diff-util, removing about 1500 loc and the entire diff/ and object/ packages