@@ -1,13 +1,9 @@
-
 package io.github.jbellis.brokk.difftool.ui;
 
+import com.github.difflib.patch.AbstractDelta;
+import com.github.difflib.patch.Patch;
 import com.jgoodies.forms.layout.CellConstraints;
 import com.jgoodies.forms.layout.FormLayout;
-import io.github.jbellis.brokk.difftool.diff.JMChunk;
-import io.github.jbellis.brokk.difftool.diff.JMDelta;
-import io.github.jbellis.brokk.difftool.diff.JMDiff;
-import io.github.jbellis.brokk.difftool.diff.JMRevision;
-import io.github.jbellis.brokk.difftool.doc.AbstractBufferDocument;
 import io.github.jbellis.brokk.difftool.doc.BufferDocumentIF;
 import io.github.jbellis.brokk.difftool.doc.JMDocumentEvent;
 import io.github.jbellis.brokk.difftool.node.BufferNode;
@@ -18,706 +14,526 @@ import io.github.jbellis.brokk.difftool.search.SearchBarDialog;
 
 import javax.swing.*;
 import javax.swing.text.BadLocationException;
-import javax.swing.text.JTextComponent;
-import javax.swing.text.PlainDocument;
 import java.awt.*;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
 
-public class BufferDiffPanel extends AbstractContentPanel {
+/**
+ * This panel shows the side-by-side file panels, the diff curves, plus search bars.
+ * It no longer depends on custom JMRevision/JMDelta but rather on a Patch<String>.
+ */
+public class BufferDiffPanel extends AbstractContentPanel
+{
     public static final int LEFT = 0;
     public static final int RIGHT = 2;
     public static final int NUMBER_OF_PANELS = 3;
 
-
     private final BrokkDiffPanel mainPanel;
     private final boolean isDarkTheme;
 
-    public FilePanel[] getFilePanels() {
-        return filePanels;
-    }
+    // Instead of JMRevision:
+    private Patch<String> patch; // from JMDiffNode
+    private AbstractDelta<String> selectedDelta;
 
-    private FilePanel[] filePanels;
-    private JMDiffNode diffNode;
-    private JMRevision currentRevision;
-    private JMDelta selectedDelta;
     private int selectedLine;
     private SearchBarDialog leftBar;
     private SearchBarDialog rightBar;
     private JCheckBox caseSensitiveCheckBox;
 
+    // The left & right "file panels"
+    private FilePanel[] filePanels;
+    private int filePanelSelectedIndex = -1;
+
+    private JMDiffNode diffNode; // Where we get the Patch<String>
     private ScrollSynchronizer scrollSynchronizer;
-    private JMDiff diff;
     private JSplitPane splitPane;
 
-    int filePanelSelectedIndex = -1;
-
-    static Color selectionColor = Color.BLUE;
-    static Color newColor = Color.CYAN;
-    static Color mixColor = Color.WHITE;
-
-    static {
-        selectionColor = new Color(selectionColor.getRed() * newColor.getRed() / mixColor.getRed()
-                , selectionColor.getGreen() * newColor.getGreen() / mixColor.getGreen()
-                , selectionColor.getBlue() * newColor.getBlue() / mixColor.getBlue());
+    public BufferDiffPanel(BrokkDiffPanel mainPanel)
+    {
+        this(mainPanel, false);
     }
 
-
-    public ScrollSynchronizer getScrollSynchronizer() {
-        return scrollSynchronizer;
-    }
-
-    public BrokkDiffPanel getMainPanel() {
-        return mainPanel;
-    }
-
-    // Original constructor (kept for compatibility if needed, delegates to new one)
-    public BufferDiffPanel(BrokkDiffPanel mainPanel) {
-        this(mainPanel, false); // Default to light theme
-    }
-
-    // Constructor accepting theme
-    public BufferDiffPanel(BrokkDiffPanel mainPanel, boolean isDarkTheme) {
+    public BufferDiffPanel(BrokkDiffPanel mainPanel, boolean isDarkTheme)
+    {
         this.mainPanel = mainPanel;
         this.isDarkTheme = isDarkTheme;
+        // Let the mainPanel keep a reference to us for toolbar/undo/redo interplay
         mainPanel.setBufferDiffPanel(this);
-        diff = new JMDiff();
-
         init();
-
         setFocusable(true);
     }
 
-    public void setDiffNode(JMDiffNode diffNode) {
+    public void setDiffNode(JMDiffNode diffNode)
+    {
         this.diffNode = diffNode;
         refreshDiffNode();
     }
 
-    public JMDiffNode getDiffNode() {
+    public JMDiffNode getDiffNode()
+    {
         return diffNode;
     }
 
-    private void refreshDiffNode() {
-        BufferNode bnLeft = getDiffNode().getBufferNodeLeft();
-        BufferNode bnRight = getDiffNode().getBufferNodeRight();
+    /**
+     * Re-read the patch from the node, re-bind the left & right documents, etc.
+     */
+    private void refreshDiffNode()
+    {
+        if (diffNode == null) {
+            return;
+        }
+        BufferNode bnLeft = diffNode.getBufferNodeLeft();
+        BufferNode bnRight = diffNode.getBufferNodeRight();
 
-        BufferDocumentIF leftDocument = bnLeft == null ? null : bnLeft.getDocument();
-        BufferDocumentIF rightDocument = bnRight == null ? null : bnRight.getDocument();
+        BufferDocumentIF leftDocument = (bnLeft != null ? bnLeft.getDocument() : null);
+        BufferDocumentIF rightDocument = (bnRight != null ? bnRight.getDocument() : null);
 
-        setBufferDocuments(leftDocument, rightDocument, getDiffNode().getDiff(), getDiffNode().getRevision());
+        // After calling diff() on JMDiffNode, we get patch from diffNode.getPatch():
+        this.patch = diffNode.getPatch(); // new Patch or null
+
+        // Set the documents into our file panels:
+        if (filePanels[LEFT] != null && leftDocument != null) {
+            filePanels[LEFT].setBufferDocument(leftDocument);
+        }
+        if (filePanels[RIGHT] != null && rightDocument != null) {
+            filePanels[RIGHT].setBufferDocument(rightDocument);
+        }
+
+        reDisplay();
     }
 
-    private void setBufferDocuments(BufferDocumentIF bd1, BufferDocumentIF bd2,
-                                    JMDiff diff, JMRevision revision) {
-        this.diff = diff;
-        currentRevision = revision;
-
-        if (bd1 != null) {
-            filePanels[LEFT].setBufferDocument(bd1);
-        }
-
-        if (bd2 != null) {
-            filePanels[RIGHT].setBufferDocument(bd2);
-        }
-
-        if (bd1 != null && bd2 != null) {
+    /**
+     * Rerun the diff from scratch, if needed. For Phase 2 we re-run if a doc changed
+     * (the old incremental logic is removed).
+     */
+    public void diff()
+    {
+        // Typically, we'd just re-call diffNode.diff() then re-pull patch.
+        if (diffNode != null) {
+            diffNode.diff();
+            this.patch = diffNode.getPatch();
             reDisplay();
         }
     }
 
-    private void reDisplay() {
-        for (FilePanel fp : filePanels) {
-            if (fp != null) {
-                fp.reDisplay();
+    /**
+     * Tells each FilePanel to re-apply highlights, then repaint the parent panel.
+     */
+    private void reDisplay()
+    {
+        if (filePanels != null) {
+            for (var fp : filePanels) {
+                if (fp != null) {
+                    fp.reDisplay();
+                }
             }
         }
         mainPanel.repaint();
     }
 
-    public String getTitle() {
-        String title;
-        List<String> titles = new ArrayList<>();
-        for (FilePanel filePanel : filePanels) {
-            if (filePanel == null) {
-                continue;
+    public String getTitle()
+    {
+        var titles = new ArrayList<String>();
+        for (var fp : filePanels) {
+            if (fp == null) continue;
+            var bd = fp.getBufferDocument();
+            if (bd != null) {
+                titles.add(bd.getShortName());
             }
-
-            BufferDocumentIF bd = filePanel.getBufferDocument();
-            if (bd == null) {
-                continue;
-            }
-
-            title = bd.getShortName();
-
-            titles.add(title);
         }
-
+        if (titles.isEmpty()) {
+            return "No files";
+        }
         if (titles.size() == 1) {
-            title = titles.getFirst();
-        } else {
-            if (titles.get(0).equals(titles.get(1))) {
-                title = titles.getFirst();
-            } else {
-                title = titles.get(0) + "-" + titles.get(1);
-            }
+            return titles.get(0);
         }
-
-        return title;
+        if (titles.get(0).equals(titles.get(1))) {
+            return titles.get(0);
+        }
+        return titles.get(0) + "-" + titles.get(1);
     }
 
-    public boolean isDarkTheme() {
+    public boolean isDarkTheme()
+    {
         return isDarkTheme;
     }
-    
-    public boolean revisionChanged(JMDocumentEvent de) {
-        FilePanel fp;
-        BufferDocumentIF bd1;
-        BufferDocumentIF bd2;
 
-        if (currentRevision == null) {
-            diff();
-        } else {
-            fp = getFilePanel(de.getDocument());
-            if (fp == null) {
-                return false;
-            }
-
-            bd1 = filePanels[LEFT].getBufferDocument();
-            bd2 = filePanels[RIGHT].getBufferDocument();
-
-            if (!currentRevision.update(bd1 != null ? bd1.getLines() : null,
-                                        bd2 != null ? bd2.getLines() : null, fp == filePanels[LEFT], de
-                                                .getStartLine(), de.getNumberOfLines())) {
-                return false;
-            }
-
-            reDisplay();
-        }
-
+    /**
+     * Do not try incremental updates. We just re-diff the whole thing.
+     */
+    public boolean revisionChanged(JMDocumentEvent de)
+    {
+        // Old incremental logic removed
+        diff();
         return true;
     }
 
-    private FilePanel getFilePanel(AbstractBufferDocument document) {
-        for (FilePanel fp : filePanels) {
-            if (fp == null) {
-                continue;
-            }
-
-            if (fp.getBufferDocument() == document) {
-                return fp;
-            }
-        }
-
-        return null;
-    }
-
-    public void diff() {
-        BufferDocumentIF bd1;
-        BufferDocumentIF bd2;
-
-        bd1 = filePanels[LEFT].getBufferDocument();
-        bd2 = filePanels[RIGHT].getBufferDocument();
-
-        if (bd1 != null && bd2 != null) {
-            try {
-                currentRevision = diff.diff(bd1.getLines(), bd2.getLines()
-                        , getDiffNode().getIgnore());
-
-                reDisplay();
-            } catch (Exception ex) {
-                ex.printStackTrace();
-            }
-        }
-    }
-
-    private void init() {
-        String columns = "3px, pref, 3px, 0:grow, 5px, min, 60px, 0:grow, 25px, min, 3px, pref, 3px";
-        String rows = "6px, pref, 3px, fill:0:grow, pref";
+    /**
+     * The top-level UI for the left & right file panels plus the “diff scroll component”.
+     */
+    private void init()
+    {
+        var columns = "3px, pref, 3px, 0:grow, 5px, min, 60px, 0:grow, 25px, min, 3px, pref, 3px";
+        var rows = "6px, pref, 3px, fill:0:grow, pref";
 
         setLayout(new BorderLayout());
 
-        if (splitPane != null) {
-            remove(splitPane);
-        }
         splitPane = new JSplitPane(JSplitPane.VERTICAL_SPLIT, true, activateBarDialog(), buildFilePanel(columns, rows));
         add(splitPane);
-        //just synchronizes scrolling, nothing UI building related
+
+        // Create the scroll synchronizer for the left & right panels
         scrollSynchronizer = new ScrollSynchronizer(this, filePanels[LEFT], filePanels[RIGHT]);
         setSelectedPanel(filePanels[LEFT]);
-        getMainPanel().updateUndoRedoButtons();
+        mainPanel.updateUndoRedoButtons();
     }
 
-
-    public JCheckBox getCaseSensitiveCheckBox() {
+    public JCheckBox getCaseSensitiveCheckBox()
+    {
         return caseSensitiveCheckBox;
     }
 
+    /**
+     * Build the top row that holds search bars plus a "Case Sensitive" checkbox.
+     */
+    public JPanel activateBarDialog()
+    {
+        var barContainer = new JPanel(new BorderLayout());
 
-    public JPanel activateBarDialog() {
-        JPanel barContainer = new JPanel(new BorderLayout()); // Use BorderLayout for left & right placement
-
-        // Case-Sensitive Toggle:
         caseSensitiveCheckBox = new JCheckBox("Case Sensitive");
-        caseSensitiveCheckBox.setFocusable(false); // Avoids stealing focus
+        caseSensitiveCheckBox.setFocusable(false);
 
-        leftBar = new SearchBarDialog(getMainPanel(), this);
-        rightBar = new SearchBarDialog(getMainPanel(), this);
+        leftBar = new SearchBarDialog(mainPanel, this);
+        rightBar = new SearchBarDialog(mainPanel, this);
 
-        JPanel leftPanel = new JPanel(new FlowLayout(FlowLayout.LEFT));
-
-        leftPanel.add(Box.createHorizontalStrut(5)); // Add space between checkbox and left bar
+        var leftPanel = new JPanel(new FlowLayout(FlowLayout.LEFT));
+        leftPanel.add(Box.createHorizontalStrut(5));
         leftPanel.add(leftBar);
 
-        JPanel leftMostPanelUp = new JPanel(new FlowLayout(FlowLayout.LEADING));
-        leftMostPanelUp.add(caseSensitiveCheckBox);
+        var topLinePanelLeft = new JPanel(new FlowLayout(FlowLayout.LEADING));
+        topLinePanelLeft.add(caseSensitiveCheckBox);
 
-        JPanel leftMostPanelDown = new JPanel(new FlowLayout(FlowLayout.CENTER));
-        leftMostPanelDown.add(new JLabel(""));
+        var topLinePanelDown = new JPanel(new FlowLayout(FlowLayout.CENTER));
+        topLinePanelDown.add(new JLabel(""));
 
-        JPanel leftMostPane = new JPanel();
+        var leftMostPane = new JPanel();
         leftMostPane.setLayout(new BoxLayout(leftMostPane, BoxLayout.Y_AXIS));
-        leftMostPane.add(leftMostPanelUp);
-        leftMostPane.add(leftMostPanelDown);
+        leftMostPane.add(topLinePanelLeft);
+        leftMostPane.add(topLinePanelDown);
         leftMostPane.setBorder(BorderFactory.createEmptyBorder(6, 0, 0, 0));
 
-        JPanel rightPanel = new JPanel(new FlowLayout(FlowLayout.LEFT));
+        var rightPanel = new JPanel(new FlowLayout(FlowLayout.LEFT));
         rightPanel.add(rightBar);
+        rightPanel.add(Box.createHorizontalStrut(5));
 
-        rightPanel.add(Box.createHorizontalStrut(5)); // Add space between checkbox and left bar
         barContainer.add(leftMostPane, BorderLayout.WEST);
         barContainer.add(leftPanel, BorderLayout.CENTER);
         barContainer.add(rightPanel, BorderLayout.EAST);
 
+        // Re-run search whenever user toggles "Case Sensitive"
+        caseSensitiveCheckBox.addActionListener(e -> {
+            if (filePanels[LEFT] != null) filePanels[LEFT].doSearch();
+            if (filePanels[RIGHT] != null) filePanels[RIGHT].doSearch();
+        });
+
         return barContainer;
     }
 
-
-    private JPanel buildFilePanel(String columns, String rows) {
-        FormLayout layout;
-        CellConstraints cc;
-        JPanel filePanel = new JPanel();
-        layout = new FormLayout(columns, rows);
-        cc = new CellConstraints();
-
-        filePanel.setLayout(layout);
+    /**
+     * Build the actual file-panels and the center "diff scroll curves".
+     */
+    private JPanel buildFilePanel(String columns, String rows)
+    {
+        var layout = new FormLayout(columns, rows);
+        var cc = new CellConstraints();
+        var panel = new JPanel(layout);
 
         filePanels = new FilePanel[NUMBER_OF_PANELS];
-
-        // TODO: FilePanel needs to accept isDarkTheme in constructor when it becomes editable
-        // filePanels[LEFT] = new FilePanel(this, BufferDocumentIF.ORIGINAL, leftBar, isDarkTheme);
-        // filePanels[RIGHT] = new FilePanel(this, BufferDocumentIF.REVISED, rightBar, isDarkTheme);
-        // For now, using old constructor:
         filePanels[LEFT] = new FilePanel(this, BufferDocumentIF.ORIGINAL, leftBar);
         filePanels[RIGHT] = new FilePanel(this, BufferDocumentIF.REVISED, rightBar);
 
-        filePanel.add(new RevisionBar(this, filePanels[LEFT], true), cc.xy(2, 4));
-        filePanel.add(new JLabel(""), cc.xy(2, 2));
+        // Left side revision bar
+        panel.add(new RevisionBar(this, filePanels[LEFT], true), cc.xy(2, 4));
+        panel.add(new JLabel(""), cc.xy(2, 2)); // for spacing
 
-        filePanel.add(filePanels[LEFT].getScrollPane(), cc.xyw(4, 4, 3));
+        panel.add(filePanels[LEFT].getScrollPane(), cc.xyw(4, 4, 3));
 
-        //the middle diff panel that holds the curves and pointers to each side of the editor
-        DiffScrollComponent diffScrollComponent = new DiffScrollComponent(this, LEFT, RIGHT);
-        filePanel.add(diffScrollComponent, cc.xy(7, 4));
+        // The middle area for drawing the linking curves
+        var diffScrollComponent = new DiffScrollComponent(this, LEFT, RIGHT);
+        panel.add(diffScrollComponent, cc.xy(7, 4));
 
-        filePanel.add(new RevisionBar(this, filePanels[RIGHT], false), cc.xy(12, 4));
-        filePanel.add(filePanels[RIGHT].getScrollPane(), cc.xyw(8, 4, 3));
+        // Right side revision bar
+        panel.add(new RevisionBar(this, filePanels[RIGHT], false), cc.xy(12, 4));
+        panel.add(filePanels[RIGHT].getScrollPane(), cc.xyw(8, 4, 3));
 
-        filePanel.setMinimumSize(new Dimension(300, 200));
-        return filePanel;
+        panel.setMinimumSize(new Dimension(300, 200));
+        return panel;
     }
 
-    public JMRevision getCurrentRevision() {
-        return currentRevision;
+    public ScrollSynchronizer getScrollSynchronizer()
+    {
+        return scrollSynchronizer;
     }
 
-
-    public void runChange(int fromPanelIndex, int toPanelIndex, boolean shift) {
-        JMDelta delta;
-        BufferDocumentIF fromBufferDocument;
-        BufferDocumentIF toBufferDocument;
-        PlainDocument from;
-        String s;
-        int fromLine;
-        int fromOffset;
-        int toOffset;
-        int size;
-        JMChunk fromChunk;
-        JMChunk toChunk;
-        JTextComponent toEditor;
-
-        delta = getSelectedDelta();
-        if (delta == null) {
-            return;
-        }
-
-        if (fromPanelIndex < 0 || fromPanelIndex >= filePanels.length) {
-            return;
-        }
-
-        if (toPanelIndex < 0 || toPanelIndex >= filePanels.length) {
-            return;
-        }
-
-        try {
-            fromBufferDocument = filePanels[fromPanelIndex].getBufferDocument();
-            toBufferDocument = filePanels[toPanelIndex].getBufferDocument();
-
-            if (fromPanelIndex < toPanelIndex) {
-                fromChunk = delta.getOriginal();
-                toChunk = delta.getRevised();
-            } else {
-                fromChunk = delta.getRevised();
-                toChunk = delta.getOriginal();
-            }
-            toEditor = filePanels[toPanelIndex].getEditor();
-
-            if (fromBufferDocument == null || toBufferDocument == null) {
-                return;
-            }
-
-            fromLine = fromChunk.getAnchor();
-            size = fromChunk.getSize();
-            fromOffset = fromBufferDocument.getOffsetForLine(fromLine);
-            if (fromOffset < 0) {
-                return;
-            }
-
-            toOffset = fromBufferDocument.getOffsetForLine(fromLine + size);
-            if (toOffset < 0) {
-                return;
-            }
-
-            from = fromBufferDocument.getDocument();
-            s = from.getText(fromOffset, toOffset - fromOffset);
-
-            fromLine = toChunk.getAnchor();
-            size = toChunk.getSize();
-            fromOffset = toBufferDocument.getOffsetForLine(fromLine);
-            if (fromOffset < 0) {
-                return;
-            }
-
-            toOffset = toBufferDocument.getOffsetForLine(fromLine + size);
-            if (toOffset < 0) {
-                return;
-            }
-            toEditor.setSelectionStart(fromOffset);
-            toEditor.setSelectionEnd(toOffset);
-            if (!shift) {
-                toEditor.replaceSelection(s);
-            } else {
-                toEditor.getDocument().insertString(toOffset, s, null);
-            }
-
-            setSelectedDelta(null);
-            setSelectedLine(delta.getOriginal().getAnchor());
-        } catch (Exception ex) {
-            ex.printStackTrace();
-        }
+    public BrokkDiffPanel getMainPanel()
+    {
+        return mainPanel;
     }
 
-    public void runDelete(int fromPanelIndex, int toPanelIndex) {
-        JMDelta delta;
-        BufferDocumentIF bufferDocument;
-
-        int fromLine;
-        int fromOffset;
-        int toOffset;
-        int size;
-        JMChunk chunk;
-        JTextComponent toEditor;
-
-        try {
-            delta = getSelectedDelta();
-            if (delta == null) {
-                return;
-            }
-
-            // Some sanity checks.
-            if (fromPanelIndex < 0 || fromPanelIndex >= filePanels.length) {
-                return;
-            }
-
-            if (toPanelIndex < 0 || toPanelIndex >= filePanels.length) {
-                return;
-            }
-
-            bufferDocument = filePanels[fromPanelIndex].getBufferDocument();
-            if (fromPanelIndex < toPanelIndex) {
-                chunk = delta.getOriginal();
-            } else {
-                chunk = delta.getRevised();
-            }
-            toEditor = filePanels[fromPanelIndex].getEditor();
-
-            if (bufferDocument == null) {
-                return;
-            }
-
-
-            fromLine = chunk.getAnchor();
-            size = chunk.getSize();
-            fromOffset = bufferDocument.getOffsetForLine(fromLine);
-            if (fromOffset < 0) {
-                return;
-            }
-
-            toOffset = bufferDocument.getOffsetForLine(fromLine + size);
-            if (toOffset < 0) {
-                return;
-            }
-
-            toEditor.setSelectionStart(fromOffset);
-            toEditor.setSelectionEnd(toOffset);
-            toEditor.replaceSelection("");
-
-            setSelectedDelta(null);
-            setSelectedLine(delta.getOriginal().getAnchor());
-        } catch (Exception ex) {
-            ex.printStackTrace();
-        }
+    /**
+     * We simply retrieve the patch from the node if needed.
+     */
+    public Patch<String> getPatch()
+    {
+        return patch;
     }
 
-    void setSelectedPanel(FilePanel fp) {
-        int index;
+    /**
+     * Return whichever delta is considered “selected” in the UI.
+     */
+    public AbstractDelta<String> getSelectedDelta()
+    {
+        return selectedDelta;
+    }
 
-        index = -1;
+    /**
+     * Called by `DiffScrollComponent` or `RevisionBar` to set which delta has been clicked.
+     */
+    public void setSelectedDelta(AbstractDelta<String> newDelta)
+    {
+        this.selectedDelta = newDelta;
+        setSelectedLine(newDelta != null ? newDelta.getSource().getPosition() : 0);
+    }
+
+    public void setSelectedLine(int line)
+    {
+        selectedLine = line;
+    }
+
+    public int getSelectedLine()
+    {
+        return selectedLine;
+    }
+
+    public FilePanel getFilePanel(int index)
+    {
+        if (filePanels == null) return null;
+        if (index < 0 || index >= filePanels.length) return null;
+        return filePanels[index];
+    }
+
+    void setSelectedPanel(FilePanel fp)
+    {
+        var oldIndex = filePanelSelectedIndex;
+        var newIndex = -1;
         for (int i = 0; i < filePanels.length; i++) {
             if (filePanels[i] == fp) {
-                index = i;
+                newIndex = i;
+                break;
             }
         }
-
-        if (index != filePanelSelectedIndex) {
-            if (filePanelSelectedIndex != -1) {
-                filePanels[filePanelSelectedIndex].setSelected(false);
+        if (newIndex != oldIndex) {
+            if (oldIndex != -1 && filePanels[oldIndex] != null) {
+                filePanels[oldIndex].setSelected(false);
             }
-
-            filePanelSelectedIndex = index;
-
-            if (filePanelSelectedIndex != -1) {
-                filePanels[filePanelSelectedIndex].setSelected(true);
+            filePanelSelectedIndex = newIndex;
+            if (newIndex != -1) {
+                filePanels[newIndex].setSelected(true);
             }
         }
     }
 
+    /**
+     * Called by the top-level toolbar “Next” or “Previous” or by mouse wheel in DiffScrollComponent.
+     */
+    public void toNextDelta(boolean next)
+    {
+        if (patch == null || patch.getDeltas().isEmpty()) {
+            return;
+        }
+        var deltas = patch.getDeltas();
+        if (selectedDelta == null) {
+            // If nothing selected, pick first or last
+            setSelectedDelta(next ? deltas.get(0) : deltas.get(deltas.size() - 1));
+            showSelectedDelta();
+            return;
+        }
+        var idx = deltas.indexOf(selectedDelta);
+        if (idx < 0) {
+            // The current selection is not in the patch list, pick first
+            setSelectedDelta(deltas.get(0));
+        } else {
+            var newIdx = next ? idx + 1 : idx - 1;
+            if (newIdx < 0) newIdx = deltas.size() - 1;
+            if (newIdx >= deltas.size()) newIdx = 0;
+            setSelectedDelta(deltas.get(newIdx));
+        }
+        showSelectedDelta();
+    }
 
-    public void doSave() {
-        BufferDocumentIF document;
+    /**
+     * Scroll so the selectedDelta is visible in the left panel, then the ScrollSynchronizer
+     * will sync the right side.
+     */
+    private void showSelectedDelta()
+    {
+        if (selectedDelta == null) return;
+        scrollSynchronizer.showDelta(selectedDelta);
+    }
 
-        for (FilePanel filePanel : filePanels) {
-            if (filePanel == null) {
-                continue;
+    /**
+     * The “change” operation from left->right or right->left.
+     * We replicate the old logic, then remove the used delta from the patch
+     * so it can’t be applied repeatedly.
+     */
+    public void runChange(int fromPanelIndex, int toPanelIndex, boolean shift)
+    {
+        var delta = getSelectedDelta();
+        if (delta == null) return;
+
+        var fromFilePanel = filePanels[fromPanelIndex];
+        var toFilePanel = filePanels[toPanelIndex];
+        if (fromFilePanel == null || toFilePanel == null) return;
+
+        var fromDoc = fromFilePanel.getBufferDocument();
+        var toDoc = toFilePanel.getBufferDocument();
+        if (fromDoc == null || toDoc == null) return;
+
+        // Decide which side is "source" vs "target" chunk
+        var sourceChunk = (fromPanelIndex < toPanelIndex) ? delta.getSource() : delta.getTarget();
+        var targetChunk = (fromPanelIndex < toPanelIndex) ? delta.getTarget() : delta.getSource();
+
+        var fromLine = sourceChunk.getPosition();
+        var size = sourceChunk.size();
+        var fromOffset = fromDoc.getOffsetForLine(fromLine);
+        if (fromOffset < 0) return;
+        var toOffset = fromDoc.getOffsetForLine(fromLine + size);
+        if (toOffset < 0) return;
+
+        try {
+            var fromPlainDoc = fromDoc.getDocument();
+            var replacedText = fromPlainDoc.getText(fromOffset, toOffset - fromOffset);
+
+            var toLine = targetChunk.getPosition();
+            var toSize = targetChunk.size();
+            var toFromOffset = toDoc.getOffsetForLine(toLine);
+            if (toFromOffset < 0) return;
+            var toToOffset = toDoc.getOffsetForLine(toLine + toSize);
+            if (toToOffset < 0) return;
+
+            var toEditor = toFilePanel.getEditor();
+            toEditor.setSelectionStart(toFromOffset);
+            toEditor.setSelectionEnd(toToOffset);
+
+            // SHIFT -> Insert after the existing chunk
+            if (!shift) {
+                toEditor.replaceSelection(replacedText);
+            } else {
+                // Insert at the end, effectively appending
+                toEditor.getDocument().insertString(toToOffset, replacedText, null);
             }
 
-            if (!filePanel.isDocumentChanged()) {
-                continue;
-            }
+            // Remove this delta so we can't click it again
+            patch.getDeltas().remove(delta);
 
-            document = filePanel.getBufferDocument();
+            setSelectedDelta(null);
+            setSelectedLine(sourceChunk.getPosition());
 
+            // Re-display so the chunk disappears immediately
+            reDisplay();
+            doSave();
+        } catch (BadLocationException ex) {
+            throw new RuntimeException("Error applying change operation", ex);
+        }
+    }
+
+    /**
+     * The “delete” operation: remove the chunk from the fromPanel side.
+     * Afterward, remove the delta so it doesn’t stay clickable.
+     */
+    public void runDelete(int fromPanelIndex, int toPanelIndex) {
+        var delta = getSelectedDelta();
+        if (delta == null) return;
+
+        var fromFilePanel = filePanels[fromPanelIndex];
+        if (fromFilePanel == null) return;
+
+        var fromDoc = fromFilePanel.getBufferDocument();
+        if (fromDoc == null) return;
+
+        var chunk = (fromPanelIndex < toPanelIndex) ? delta.getSource() : delta.getTarget();
+
+        var fromLine = chunk.getPosition();
+        var size = chunk.size();
+        var fromOffset = fromDoc.getOffsetForLine(fromLine);
+        if (fromOffset < 0) return;
+        var toOffset = fromDoc.getOffsetForLine(fromLine + size);
+        if (toOffset < 0) return;
+
+        var toEditor = fromFilePanel.getEditor();
+        toEditor.setSelectionStart(fromOffset);
+        toEditor.setSelectionEnd(toOffset);
+        toEditor.replaceSelection("");
+
+        // Remove the just-used delta
+        patch.getDeltas().remove(delta);
+
+        setSelectedDelta(null);
+        setSelectedLine(chunk.getPosition());
+
+        // Refresh so the UI doesn't show that chunk anymore
+        reDisplay();
+        doSave();
+    }
+
+    /**
+     * Writes out any changed documents to disk. Typically invoked after applying changes or undo/redo.
+     */
+    public void doSave()
+    {
+        for (var fp : filePanels) {
+            if (fp == null) continue;
+            if (!fp.isDocumentChanged()) continue;
+            var doc = fp.getBufferDocument();
             try {
-                document.write();
+                doc.write();
             } catch (Exception ex) {
-                ex.printStackTrace();
-                JOptionPane.showMessageDialog(mainPanel, "Can't save file"
-                                                      + document.getName(),
+                JOptionPane.showMessageDialog(mainPanel,
+                                              "Can't save file: " + doc.getName() + "\n" + ex.getMessage(),
                                               "Problem writing file", JOptionPane.ERROR_MESSAGE);
             }
         }
     }
 
-    public void setSelectedDelta(JMDelta delta) {
-        selectedDelta = delta;
-        setSelectedLine(delta == null ? 0 : delta.getOriginal().getAnchor());
+    /**
+     * The “down arrow” in the toolbar calls doDown().
+     * We step to next delta if possible, or re-scroll from top.
+     */
+    @Override
+    public void doDown()
+    {
+        toNextDelta(true);
     }
 
-    public void setSelectedLine(int line) {
-        selectedLine = line;
-    }
-
-
-    public JMDelta getSelectedDelta() {
-        List<JMDelta> deltas;
-
-        if (currentRevision == null) {
-            return null;
-        }
-
-        deltas = currentRevision.getDeltas();
-        if (deltas.isEmpty()) {
-            return null;
-        }
-
-        return selectedDelta;
-    }
-
-    public FilePanel getFilePanel(int index) {
-        if (index < 0 || index > filePanels.length) {
-            return null;
-        }
-
-        return filePanels[index];
-    }
-
-    public void doGotoDelta(JMDelta delta) {
-        setSelectedDelta(delta);
-        showSelectedDelta();
-    }
-
-    public void doGotoLine(int line) {
-        BufferDocumentIF bd;
-        int offset;
-        int startOffset;
-        int endOffset;
-        JViewport viewport;
-        JTextComponent editor;
-        Point p;
-        FilePanel fp;
-        Rectangle rect;
-
-        setSelectedLine(line);
-
-        fp = getFilePanel(0);
-
-        bd = fp.getBufferDocument();
-        if (bd == null) {
-            return;
-        }
-
-        offset = bd.getOffsetForLine(line);
-        viewport = fp.getScrollPane().getViewport();
-        editor = fp.getEditor();
-
-        // Don't go anywhere if the line is already visible.
-        rect = viewport.getViewRect();
-        startOffset = editor.viewToModel(rect.getLocation());
-        endOffset = editor.viewToModel(new Point(rect.x, rect.y + rect.height));
-        if (offset >= startOffset && offset <= endOffset) {
-            return;
-        }
-
-        try {
-            p = editor.modelToView(offset).getLocation();
-            p.x = 0;
-
-            viewport.setViewPosition(p);
-        } catch (BadLocationException ex) {
-        }
-    }
-
-    private void showSelectedDelta() {
-        JMDelta delta = getSelectedDelta();
-        if (delta == null) {
-            return;
-        }
-        scrollSynchronizer.showDelta(delta);
+    /**
+     * The “up arrow” in the toolbar calls doUp().
+     * We step to previous delta if possible, or re-scroll from bottom.
+     */
+    @Override
+    public void doUp()
+    {
+        toNextDelta(false);
     }
 
     @Override
-    public void doUndo() {
+    public void doUndo()
+    {
         super.doUndo();
-        getMainPanel().updateUndoRedoButtons(); // Update buttons after performing undo
+        mainPanel.updateUndoRedoButtons();
     }
 
     @Override
-    public void doRedo() {
+    public void doRedo()
+    {
         super.doRedo();
-        getMainPanel().updateUndoRedoButtons();  // Update buttons after performing redo
-    }
-
-    @Override
-    public void doDown() {
-        JMDelta d;
-
-        List<JMDelta> deltas;
-        int index;
-
-        if (currentRevision == null) {
-            return;
-        }
-
-        deltas = currentRevision.getDeltas();
-        JMDelta sd = getSelectedDelta();
-        index = deltas.indexOf(sd);
-        if (index == -1 || sd.getOriginal().getAnchor() != selectedLine) {
-            // Find the delta that would have been next to the
-            //   disappeared delta:
-            d = null;
-            for (JMDelta delta : deltas) {
-                d = delta;
-                if (delta.getOriginal().getAnchor() > selectedLine) {
-                    break;
-                }
-            }
-            setSelectedDelta(d);
-        } else {
-            // Select the next delta if there is any.
-            if (index + 1 < deltas.size()) {
-                setSelectedDelta(deltas.get(index + 1));
-            }
-        }
-        showSelectedDelta();
-    }
-
-
-    @Override
-    public void doUp() {
-        JMDelta d;
-        if (currentRevision == null) {
-            return;
-        }
-
-        List<JMDelta> deltas = currentRevision.getDeltas();
-        JMDelta sd = getSelectedDelta();
-        int index = deltas.indexOf(sd);
-        if (index == -1 || sd.getOriginal().getAnchor() != selectedLine) {
-            // Find the delta that would have been previous to the
-            //   disappeared delta:
-            d = null;
-            for (JMDelta delta : deltas) {
-                d = delta;
-                if (delta.getOriginal().getAnchor() > selectedLine) {
-                    break;
-                }
-            }
-
-            setSelectedDelta(d);
-        } else {
-            // Select the next delta if there is any.
-            if (index - 1 >= 0) {
-                setSelectedDelta(deltas.get(index - 1));
-                if (index - 1 == 0) {
-                    Arrays.stream(filePanels).forEach(
-                            item ->
-                            {
-                                if (item != null) {
-                                    item.getScrollPane().getVerticalScrollBar()
-                                            .setValue(0);
-                                }
-                            });
-                }
-            } else {
-                setSelectedDelta(deltas.getFirst());
-                Arrays.stream(filePanels).forEach(
-                        item ->
-                        {
-                            if (item != null) {
-                                item.getScrollPane().getVerticalScrollBar()
-                                        .setValue(0);
-                            }
-                        });
-            }
-        }
-        showSelectedDelta();
-    }
-
-    public void toNextDelta(boolean next) {
-        if (next) {
-            doDown();
-        } else {
-            doUp();
-        }
+        mainPanel.updateUndoRedoButtons();
     }
 }
